# college-helper-bot

./: .gitignore  README.md  pyproject.toml
data/: groups.json  report.json
scripts/: start_bot.sh
src/college_bot/: config.py  main.py  states.py
src/college_bot/background/: scheduler.py  tasks.py
src/college_bot/core/: dispatcher.py
src/college_bot/handlers/callbacks/: main.py  report.py
src/college_bot/handlers/common/: start.py
src/college_bot/keyboards/: inline.py
src/college_bot/services/: external_db.py
src/college_bot/services/crud/: groups_crud.py
src/college_bot/utils/: __init__.py  report_utils.py
src/college_bot/utils/json_handler/: data_manager.py
